[gd_scene load_steps=8 format=3 uid="uid://clcflbyd5317"]

[ext_resource type="Script" path="res://UI/color_puzzle.gd" id="1_k5m1y"]
[ext_resource type="Script" path="res://UI/door_puzzle.gd" id="1_tsxyv"]
[ext_resource type="Theme" uid="uid://bq1ko8jw2bbm2" path="res://Themes/base_theme.tres" id="2_3frfh"]
[ext_resource type="Script" path="res://UI/puzzle_button.gd" id="2_53hv4"]
[ext_resource type="Script" path="res://UI/line_puzzle.gd" id="5_ml513"]

[sub_resource type="SystemFont" id="SystemFont_ki1c7"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_yc1ex"]
default_font = SubResource("SystemFont_ki1c7")
default_font_size = 24

[node name="DoorPuzzle" type="Control"]
z_index = 10
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tsxyv")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -440.0
offset_right = 600.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_yc1ex")
text = "Press the flashing controller
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0
columns = 2

[node name="ColorPuzzle" type="Panel" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_k5m1y")

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/GridContainer/ColorPuzzle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0
columns = 2

[node name="Button1" type="Button" parent="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_3frfh")
script = ExtResource("2_53hv4")
bg_color = Color(1, 0, 0, 1)

[node name="Button2" type="Button" parent="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_3frfh")
script = ExtResource("2_53hv4")
bg_color = Color(0, 0.505882, 0, 1)

[node name="Button3" type="Button" parent="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_3frfh")
script = ExtResource("2_53hv4")
bg_color = Color(0, 0, 0.513726, 1)

[node name="Button4" type="Button" parent="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_3frfh")
script = ExtResource("2_53hv4")
bg_color = Color(0.753906, 0.5625, 0, 1)

[node name="LinePuzzle" type="Panel" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("5_ml513")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/GridContainer/LinePuzzle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button1" type="Button" parent="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_3frfh")
script = ExtResource("2_53hv4")
bg_color = Color(0.74902, 0.74902, 0.74902, 1)

[node name="Button2" type="Button" parent="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_3frfh")
script = ExtResource("2_53hv4")
bg_color = Color(0.74902, 0.74902, 0.74902, 1)

[node name="Button3" type="Button" parent="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_3frfh")
script = ExtResource("2_53hv4")
bg_color = Color(0.74902, 0.74902, 0.74902, 1)

[node name="Button4" type="Button" parent="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_3frfh")
script = ExtResource("2_53hv4")
bg_color = Color(0.74902, 0.74902, 0.74902, 1)

[node name="Button5" type="Button" parent="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_3frfh")
script = ExtResource("2_53hv4")
bg_color = Color(0.74902, 0.74902, 0.74902, 1)

[node name="Button6" type="Button" parent="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_3frfh")
script = ExtResource("2_53hv4")
bg_color = Color(0.74902, 0.74902, 0.74902, 1)

[node name="Button7" type="Button" parent="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_3frfh")
script = ExtResource("2_53hv4")
bg_color = Color(0.74902, 0.74902, 0.74902, 1)

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="Panel3" type="Panel" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel4" type="Panel" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="entry_failed" from="Panel/VBoxContainer/GridContainer/ColorPuzzle" to="." method="_on_color_puzzle_entry_failed"]
[connection signal="entry_passed" from="Panel/VBoxContainer/GridContainer/ColorPuzzle" to="." method="_on_color_puzzle_entry_passed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer/Button1" to="Panel/VBoxContainer/GridContainer/ColorPuzzle" method="_on_button_1_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer/Button1" to="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer/Button1" method="_on_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer/Button2" to="Panel/VBoxContainer/GridContainer/ColorPuzzle" method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer/Button2" to="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer/Button2" method="_on_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer/Button3" to="Panel/VBoxContainer/GridContainer/ColorPuzzle" method="_on_button_3_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer/Button3" to="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer/Button3" method="_on_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer/Button4" to="Panel/VBoxContainer/GridContainer/ColorPuzzle" method="_on_button_4_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer/Button4" to="Panel/VBoxContainer/GridContainer/ColorPuzzle/GridContainer/Button4" method="_on_pressed"]
[connection signal="entry_failed" from="Panel/VBoxContainer/GridContainer/LinePuzzle" to="." method="_on_line_puzzle_entry_failed"]
[connection signal="entry_passed" from="Panel/VBoxContainer/GridContainer/LinePuzzle" to="." method="_on_line_puzzle_entry_passed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button1" to="Panel/VBoxContainer/GridContainer/LinePuzzle" method="_on_button_1_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button1" to="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button1" method="_on_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button2" to="Panel/VBoxContainer/GridContainer/LinePuzzle" method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button2" to="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button2" method="_on_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button3" to="Panel/VBoxContainer/GridContainer/LinePuzzle" method="_on_button_3_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button3" to="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button3" method="_on_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button4" to="Panel/VBoxContainer/GridContainer/LinePuzzle" method="_on_button_4_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button4" to="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button4" method="_on_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button5" to="Panel/VBoxContainer/GridContainer/LinePuzzle" method="_on_button_5_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button5" to="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button5" method="_on_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button6" to="Panel/VBoxContainer/GridContainer/LinePuzzle" method="_on_button_6_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button6" to="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button6" method="_on_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button7" to="Panel/VBoxContainer/GridContainer/LinePuzzle" method="_on_button_7_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button7" to="Panel/VBoxContainer/GridContainer/LinePuzzle/HBoxContainer/VBoxContainer/Button7" method="_on_pressed"]
